<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/navigation_menu_recent"
        android:title="@string/menu_item_recent_photos"
        android:icon="@drawable/recent"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/navigation_menu_profile"
        android:title="@string/menu_item_profile"
        android:icon="@drawable/profile"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/navigation_menu_location"
        android:title="@string/menu_item_photo_by_location"
        android:icon="@drawable/location"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/navigation_menu_options"
        android:title="@string/menu_item_options"
        android:icon="@drawable/options"
        app:showAsAction="ifRoom"/>
</menu>